--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,22 @@ body {
   font-weight: 500;
 }
 
+.button {
+  color: white;
+  background-color: #e1caf6; 
+  padding: 0.2rem 0.7rem;
+  border-radius: 6px;
+  text-decoration: none;
+  display: inline-block;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.button:hover {
+  background-color: #16a34a;
+}
+
+
+
 /* PRODUCT LIST */
 .product-list {
   grid-area: productCard;
