--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,21 @@ body {
   color: #4caf50;
 }
 
+/*Product Details*/
+.quantity-controls {
+  margin: 1.5rem 0;
+}
+
+.quantity-buttons {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.back-button {
+  margin-top: 1rem;
+}
+
 /* FOOTER */
 .footer {
   grid-area: footer;
@@ -252,12 +267,12 @@ body {
   border: none;
   border-radius: 8px;
   font-weight: 500;
-  margin: 0.5rem;
+  margin: 0.2rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  text-decoration: none; /* 🔥 elimina subrayado si es <a> o <Link> */
-  font-size: 0.9rem; /* iguala tamaño de texto */
-  display: inline-block; /* aplica padding y border-radius correctamente */
+  text-decoration: none;
+  font-size: 0.9rem;
+  display: inline-block;
 }
 
 .profile-btn:hover {
